--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:h2:file:/data/demo
+#spring.datasource.url=jdbc:h2:file:/data/demo
+
+#spring.datasource.url=jdbc:h2:mem:testdb;INIT=RUNSCRIPT FROM 'classpath:data.sql'
+spring.datasource.url=jdbc:h2:mem:testdb'
+#spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 security.oauth2.resource.filter-order=3
+spring.h2.console.enabled=true
+spring.datasource.data=classpath:data.sql
