--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:h2:file:/data/demo
 
 #spring.datasource.url=jdbc:h2:mem:testdb;INIT=RUNSCRIPT FROM 'classpath:data.sql'
-spring.datasource.url=jdbc:h2:mem:testdb'
+spring.datasource.url=jdbc:h2:file:~/baseDatos
 #spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
